[gd_scene load_steps=5 format=3 uid="uid://clldrsll30ubu"]

[ext_resource type="Texture2D" uid="uid://dvrhec3g3ctee" path="res://car.png" id="1_55ny1"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_gus3m"]
[ext_resource type="Texture2D" uid="uid://dqdobiaad83ag" path="res://car 1.jpg" id="2_1fkf8"]
[ext_resource type="AudioStream" uid="uid://cwug1gygn2ddj" path="res://gaming-sound-143716.mp3" id="4_puc31"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchor_left = 0.028
anchor_right = 1.729
anchor_bottom = 1.617
offset_left = -24.256
offset_right = 24.1919
offset_bottom = 32.184
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gus3m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1904.0
offset_bottom = 856.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 2000.0
offset_bottom = 1088.0
color = Color(0, 0.0313726, 0.133333, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_top = -8.0
offset_right = 1152.0
offset_bottom = 640.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = 72.0
offset_right = 1552.0
offset_bottom = 248.0
theme_override_font_sizes/font_size = 125
text = "Racing Car"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Label"]
layout_mode = 0
offset_left = 104.0
offset_top = 288.0
offset_right = 1080.0
offset_bottom = 406.0
theme_override_font_sizes/font_size = 80
text = "Play"

[node name="Button2" type="Button" parent="Label"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.136
offset_left = 104.0
offset_top = 559.936
offset_right = 1080.0
offset_bottom = 654.0
theme_override_font_sizes/font_size = 80
text = "Option"

[node name="Button3" type="Button" parent="Label"]
layout_mode = 0
offset_left = 104.0
offset_top = 760.0
offset_right = 1088.0
offset_bottom = 878.0
theme_override_font_sizes/font_size = 80
text = "Quit"

[node name="Car" type="Sprite2D" parent="."]
position = Vector2(200, 136)
scale = Vector2(0.11087, 0.166063)
texture = ExtResource("1_55ny1")

[node name="Car1" type="Sprite2D" parent="."]
position = Vector2(1784, 152)
scale = Vector2(0.17, 0.215812)
texture = ExtResource("2_1fkf8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_puc31")
volume_db = -20.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Label/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Label/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Label/Button3" to="." method="_on_button_3_pressed"]
